--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <link rel="stylesheet" href="../src/css/estilo.css">
+    <title>UXcellence Sushi</title>
 </head>
 <body>
     
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
