--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -111,6 +111,52 @@
                     </article>
                 </center>
             </main>
+            <aside>
+          <h2>Filtros</h2>
+          <input type="text" placeholder="Pesquisar" />
+          <div class="filtro">
+            <div class="divider"></div>
+            <h3>Tipos de peixe</h3>
+            <ul>
+              <li><a href="#">Salmão</a></li>
+              <li><a href="#">Atum</a></li>
+              <li><a href="#">Lula</a></li>
+              <li><a href="#">Polvo</a></li>
+            </ul>
+          </div>
+          
+          <div class="filtro">
+            <div class="divider"></div>
+            <h3>Tipo de sushi</h3>
+            <ul>
+              <li><a href="#">Niguiri</a></li>
+              <li><a href="#">Hossomaki</a></li>
+              <li><a href="#">Uramaki</a></li>
+            </ul>
+          </div>
+        </aside>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-content">
+            <div id="contato">
+                <h3>Contato</h3>
+                <p>Email:contato@email.com</p>
+                <p>Telefone: (11)5555-5555</p>
+            </div>
+            <div id="redes-sociais">
+                <h3>Redes Sociais</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twiter-X</a></li>
+                </ul>
+                <div>
+                    <p>&copy;-2025 -todos os direitos reservados</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="./src/js/script.js"></script>
 </body>
