Adicionando elementos básicos em cada página

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -6,6 +6,22 @@
     <title>Contato</title>
 </head>
 <body>
-    
+    <header>
+        <a href="./index.html">
+            <img src="#" alt="Logo UXcellence Sushi" class="logo">
+        </a>
+        <div id="container">
+            <nav>
+                <ul>
+                    <li><a href="./cardapio.html">Cardápio</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section id="conteudo">
+
+    </section>
 </body>
 </html>
