--- a/index.html
+++ b/index.html
@@ -7,6 +7,42 @@
     <title>UXcellence Sushi</title>
 </head>
 <body>
+    <header>
+        <a href="./index.html">
+            <img src="#" alt="Logo UXcellence Sushi" class="logo">
+        </a>
+        <div id="container">
+            <nav>
+                <ul>
+                    <li><a href="./pages/cardapio.html">Cardápio</a></li>
+                    <li><a href="./pages/sobre.html">Sobre</a></li>
+                    <li><a href="./pages/contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+      <footer>
+        <div class="footer-content">
+          <div id="contato">
+            <h3>Contato</h3>
+            <p>Email:contato@email.com</p>
+            <p>Telefone: (11)5555-5555</p>
+          </div>
+          <div id="redes-sociais">
+            <h3>Redes Sociais</h3>
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Twiter-X</a></li>
+            </ul>
+            <div>
+              <p>&copy;-2025 -todos os direitos reservados</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     
     <script src="./src/js/script.js"></script>
 </body>
