--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -3,9 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <link rel="stylesheet" href="../src/css/estilo.css">
+    <title>UXcellence Sushi</title>
 </head>
 <body>
+    <header>
+        <a href="./index.html">
+            <img src="#" alt="Logo UXcellence Sushi" class="logo">
+        </a>
+        <div id="container">
+            <nav>
+                <ul>
+                    <li><a href="./cardapio.html">Cardápio</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
+                    <li><a href="./contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section id="conteudo">
+
+    </section>
+ 
+      <footer>
+        <div class="footer-content">
+          <div id="contato">
+            <h3>Contato</h3>
+            <p>Email:contato@email.com</p>
+            <p>Telefone: (11)5555-5555</p>
+          </div>
+          <div id="redes-sociais">
+            <h3>Redes Sociais</h3>
+            <ul>
+              <li><a href="#">Facebook</a></li>
+              <li><a href="#">Instagram</a></li>
+              <li><a href="#">Twiter-X</a></li>
+            </ul>
+            <div>
+              <p>&copy;-2025 -todos os direitos reservados</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
     
+    <script src="../src/js/script.js"></script>
 </body>
 </html>
