--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/css/estilo.css">
-    <title>UXcellence Sushi</title>
+   <!-- CHAMANDO O CSS EXTERNO -->
+   <link rel="stylesheet" href="../src/css/estilo.css">
+   <title>UXcellence Sushi</title>
 </head>
 <body>
     <header>
-        <a href="./index.html">
-            <img src="#" alt="Logo UXcellence Sushi" class="logo">
+        <a href="../index.html">
+            <img src="" alt="Logo UXcellence Sushi" class="logo">
         </a>
         <div id="container">
             <nav>
@@ -19,34 +20,144 @@
                     <li><a href="./contato.html">Contato</a></li>
                 </ul>
             </nav>
-        </div>
     </header>
-    <section id="conteudo">
+    <section id="sushi">
+        <div id="conteudo">
+            <main>
+                <center>
+                    <h2>Cardápio Uxcellence Sushi</h2>
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (1).jpg" alt="" />
+                        <h3>Combo Premium de Niguiris</h3>
+                        <p>Preço:R$ 89,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
 
-    </section>
- 
-      <footer>
-        <div class="footer-content">
-          <div id="contato">
-            <h3>Contato</h3>
-            <p>Email:contato@email.com</p>
-            <p>Telefone: (11)5555-5555</p>
-          </div>
-          <div id="redes-sociais">
-            <h3>Redes Sociais</h3>
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (10).jpg" alt="" />
+                        <h3>Combo Tradicional de Sushi</h3>
+                        <p>Preço:R$ 69,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (11).jpg" alt="" />
+                        <h3>Poke Bowl de Frango Grelhado</h3>
+                        <p>Preço:R$ 59,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (13).jpg" alt="" />
+                        <h3>Uramaki Crocante Especial</h3>
+                        <p>Preço:R$ 42,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (12).jpg" alt="" />
+                        <h3>Poke Bowl Tropical Veggie</h3>
+                        <p>Preço:R$ 48,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (14).jpg" alt="" />
+                        <h3>Nigiri de Salmão Especial (8 peças)</h3>
+                        <p>Preço:R$ 49,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (15).jpg" alt="" />
+                        <h3>Nigiri de Atum Clássico (8 peças)</h3>
+                        <p> Preço:R$ 52,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (5).jpg" alt="" />
+                        <h3>Uramaki Maçaricado com Gergelim (4 peças)</h3>
+                        <p>Preço:R$ 32,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (17).jpg" alt="" />
+                        <h3>Temari Sushi Colorido (12 peças)</h3>
+                        <p>Preço:R$ 64,90.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (2).jpg" alt="" />
+                        <h3>Sushi</h3>
+                        <p>Preço:.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (3).jpg" alt="" />
+                        <h3>Sushi</h3>
+                        <p>Preço:.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+
+                    <article class="produto">
+                        <img src="../src/assets/img/sushi vertical (4).jpg" alt="" />
+                        <h3>Sushi</h3>
+                        <p>Preço:.<br />.</p>
+                        <button type="submit">Veja mais</button>
+                    </article>
+                </center>
+            </main>
+            <aside>
+          <h2>Filtros</h2>
+          <input type="text" placeholder="Pesquisar" />
+          <div class="filtro">
+            <div class="divider"></div>
+            <h3>Tipos de peixe</h3>
             <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twiter-X</a></li>
+              <li><a href="#">Salmão</a></li>
+              <li><a href="#">Atum</a></li>
+              <li><a href="#">Lula</a></li>
+              <li><a href="#">Polvo</a></li>
             </ul>
-            <div>
-              <p>&copy;-2025 -todos os direitos reservados</p>
-            </div>
           </div>
+          
+          <div class="filtro">
+            <div class="divider"></div>
+            <h3>Tipo de sushi</h3>
+            <ul>
+              <li><a href="#">Niguiri</a></li>
+              <li><a href="#">Hossomaki</a></li>
+              <li><a href="#">Uramaki</a></li>
+            </ul>
+          </div>
+        </aside>
         </div>
-      </footer>
-    </div>
-    
-    <script src="../src/js/script.js"></script>
+    </section>
+    <footer>
+        <div class="footer-content">
+            <div id="contato">
+                <h3>Contato</h3>
+                <p>Email:contato@email.com</p>
+                <p>Telefone: (11)5555-5555</p>
+            </div>
+            <div id="redes-sociais">
+                <h3>Redes Sociais</h3>
+                <ul>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twiter-X</a></li>
+                </ul>
+                <div>
+                    <p>&copy;-2025 -todos os direitos reservados</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
