Estilizando página Sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -7,46 +7,69 @@
     <title>UXcellence Sushi</title>
 </head>
 <body>
-    <header>
-        <a href="./index.html">
-            <img src="#" alt="Logo UXcellence Sushi" class="logo">
-        </a>
-        <div id="container">
-            <nav>
-                <ul>
-                    <li><a href="./cardapio.html">Cardápio</a></li>
-                    <li><a href="./sobre.html">Sobre</a></li>
-                    <li><a href="./contato.html">Contato</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <section id="conteudo">
+  <header>
+      <a href="./index.html">
+          <img src="#" alt="Logo UXcellence Sushi" class="logo">
+      </a>
+      <div id="container">
+          <nav>
+              <ul>
+                  <li><a href="./cardapio.html">Cardápio</a></li>
+                  <li><a href="./sobre.html">Sobre</a></li>
+                  <li><a href="./contato.html">Contato</a></li>
+              </ul>
+          </nav>
+      </div>
+  </header>
 
-    </section>
- 
-      <footer>
-        <div class="footer-content">
+  <section id="conteudo1">
+      <div class="sobrenos">
+          <h1>UXcellence Sushi</h1>
+          <p>Acreditamos que uma boa comida conta uma boa história — e a nossa começou com um par de hashis e uma paixão verdadeira pela cultura japonesa.</p>
+
+          <p>O <strong>UXcellence Sushi</strong> nasceu da ideia de unir duas paixões: o sabor autêntico da culinária japonesa e a experiência completa de se sentir bem-vindo. Daí veio o nome — uma mistura de "user experience" com "excellence", porque aqui, cada detalhe importa.</p>
+      </div>
+      <div class="outros">
+        <p>“No UXcellence Sushi, cada prato é uma viagem para o Japão, com sabores que contam histórias, tradições e emoções.”</p>
+
+      <h2>Nossa Filosofia</h2>
+      <p>Valorizamos a autenticidade e a inovação na medida certa. Resgatamos receitas tradicionais...</p>
+
+      <h2>O Ambiente</h2>
+      <p>Nosso espaço foi pensado para transportar você para um cantinho do Japão — com decoração minimalista...</p>
+
+      <h2>Equipe e Mão na Massa</h2>
+      <p>Nossa equipe é formada por chefs experientes...</p>
+
+      <h2>Compromisso com a Qualidade</h2>
+      <p>Cada ingrediente que chega até nossa cozinha passa por um rigoroso controle...</p>
+
+      <h2>Venha nos Visitar!</h2>
+      <p>Seja no salão, pelo delivery ou no takeout, queremos que você sinta o verdadeiro sabor do Japão...</p>
+      </div>
+  </section>
+
+  <footer>
+      <div class="footer-content">
           <div id="contato">
-            <h3>Contato</h3>
-            <p>Email:contato@email.com</p>
-            <p>Telefone: (11)5555-5555</p>
+              <h3>Contato</h3>
+              <p>Email: contato@email.com</p>
+              <p>Telefone: (11) 5555-5555</p>
           </div>
           <div id="redes-sociais">
-            <h3>Redes Sociais</h3>
-            <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twiter-X</a></li>
-            </ul>
-            <div>
-              <p>&copy;-2025 -todos os direitos reservados</p>
-            </div>
+              <h3>Redes Sociais</h3>
+              <ul>
+                  <li><a href="#">Facebook</a></li>
+                  <li><a href="#">Instagram</a></li>
+                  <li><a href="#">Twitter-X</a></li>
+              </ul>
+              <div>
+                  <p>&copy; 2025 - Todos os direitos reservados</p>
+              </div>
           </div>
-        </div>
-      </footer>
-    </div>
-    
-    <script src="../src/js/script.js"></script>
+      </div>
+  </footer>
+
+  <script src="../src/js/script.js"></script>
 </body>
 </html>
