Ajustando página Cardápio

--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -28,85 +28,85 @@
                     <h2>Cardápio Uxcellence Sushi</h2>
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (1).jpg" alt="" />
-                        <h3>Combo Premium de Niguiris</h3>
-                        <p>Preço:R$ 89,90.<br />.</p>
+                        <h3>Combinado Premium de Niguiris</h3>
+                        <p>R$ 89,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (10).jpg" alt="" />
-                        <h3>Combo Tradicional de Sushi</h3>
-                        <p>Preço:R$ 69,90.<br />.</p>
+                        <h3>Combinado Tradicional de Sushi</h3>
+                        <p>R$ 69,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (11).jpg" alt="" />
                         <h3>Poke Bowl de Frango Grelhado</h3>
-                        <p>Preço:R$ 59,90.<br />.</p>
+                        <p>R$ 59,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (13).jpg" alt="" />
                         <h3>Uramaki Crocante Especial</h3>
-                        <p>Preço:R$ 42,90.<br />.</p>
+                        <p>R$ 42,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (12).jpg" alt="" />
                         <h3>Poke Bowl Tropical Veggie</h3>
-                        <p>Preço:R$ 48,90.<br />.</p>
+                        <p>R$ 48,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (14).jpg" alt="" />
                         <h3>Nigiri de Salmão Especial (8 peças)</h3>
-                        <p>Preço:R$ 49,90.<br />.</p>
+                        <p>R$ 49,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (15).jpg" alt="" />
                         <h3>Nigiri de Atum Clássico (8 peças)</h3>
-                        <p> Preço:R$ 52,90.<br />.</p>
+                        <p>R$ 52,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (5).jpg" alt="" />
                         <h3>Uramaki Maçaricado com Gergelim (4 peças)</h3>
-                        <p>Preço:R$ 32,90.<br />.</p>
+                        <p>R$ 32,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (17).jpg" alt="" />
                         <h3>Temari Sushi Colorido (12 peças)</h3>
-                        <p>Preço:R$ 64,90.<br />.</p>
+                        <p>R$ 64,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (2).jpg" alt="" />
-                        <h3>Sushi</h3>
-                        <p>Preço:.<br />.</p>
+                        <h3>Lámen Tradicional</h3>
+                        <p>R$ 45,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (3).jpg" alt="" />
-                        <h3>Sushi</h3>
-                        <p>Preço:.<br />.</p>
+                        <h3>Sashimi Salmão</h3>
+                        <p>R$ 34,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (4).jpg" alt="" />
-                        <h3>Sushi</h3>
-                        <p>Preço:.<br />.</p>
+                        <h3>Combinado Cru Salmão (28 peças)</h3>
+                        <p>R$ 74,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
                 </center>
