--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -30,22 +30,16 @@
           <p>O <strong>UXcellence Sushi</strong> nasceu da ideia de unir duas paixões: o sabor autêntico da culinária japonesa e a experiência completa de se sentir bem-vindo. Daí veio o nome — uma mistura de "user experience" com "excellence", porque aqui, cada detalhe importa.</p>
       </div>
       <div class="outros">
-        <p>“No UXcellence Sushi, cada prato é uma viagem para o Japão, com sabores que contam histórias, tradições e emoções.”</p>
-
+        
       <h2>Nossa Filosofia</h2>
-      <p>Valorizamos a autenticidade e a inovação na medida certa. Resgatamos receitas tradicionais...</p>
+      <p>Valorizamos a autenticidade e a inovação na medida certa. Resgatamos receitas tradicionais, mas também adicionamos nosso toque especial, abrangendo também a cultura nipo-brasileira.</p>
 
       <h2>O Ambiente</h2>
-      <p>Nosso espaço foi pensado para transportar você para um cantinho do Japão — com decoração minimalista...</p>
+      <p>Nosso espaço foi pensado para transportar você para um cantinho do Japão — com decoração minimalista, remetendo ao conforto e satisfação de comer uma boa comida japonêsa.</p>
 
       <h2>Equipe e Mão na Massa</h2>
-      <p>Nossa equipe é formada por chefs experientes...</p>
+      <p>Nossa equipe é formada somente por chefs mulheres experientes e apaixonadas pela culinária oriental.</p>
 
-      <h2>Compromisso com a Qualidade</h2>
-      <p>Cada ingrediente que chega até nossa cozinha passa por um rigoroso controle...</p>
-
-      <h2>Venha nos Visitar!</h2>
-      <p>Seja no salão, pelo delivery ou no takeout, queremos que você sinta o verdadeiro sabor do Japão...</p>
       </div>
   </section>
 
