--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="./index.html">
-            <img src="#" alt="Logo UXcellence Sushi" class="logo">
+            <img src="../src/assets/img/logochat.jpeg" alt="Logo UXcellence Sushi" class="logo">
         </a>
         <div id="container">
             <nav>
