--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- CHAMANDO O CSS EXTERNO -->
    <link rel="stylesheet" href="../src/css/estilo.css">
+   <link rel="icon" href="../src/assets/img/logochat.jpeg" type="image/png">
    <title>UXcellence Sushi</title>
 </head>
 <body>
