--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,8 +22,23 @@
             </nav>
         </div>
     </header>
-    <section id="conteudo">
 
-    </section>
+<section class="contato">
+  <div class="contato-container">
+    <div class="info-contato">
+      <h2>Fale Conosco</h2>
+      <p>Telefone: (11) 5555-5555</p>
+      <p>Email: contato@email.com</p>
+      <p>Rua Exemplo, 123 - São Paulo, SP</p>
+      <p>Seg-Sáb: 11h30 às 23h<br>Dom: 11h30 às 22h</p>
+      <button>FAZER RESERVA</button>
+    </div>
+    <div class="imagem-lateral">
+      <img src="../src/assets/img/mapa.jpg" alt="Endereço do local" />
+    </div>
+  </div>
+</section>
+
+
 </body>
 </html>
