--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
         <div class="footer-content">
           <div id="contato">
             <h3>Contato</h3>
-            <p>Email:contato@email.com</p>
+            <p>Email: contato@email.com</p>
             <p>Telefone: (11)5555-5555</p>
           </div>
           <div id="redes-sociais">
             <h3>Redes Sociais</h3>
             <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twiter-X</a></li>
+              <li><a href="https://www.facebook.com/?locale=pt_BR">Facebook</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://x.com/?lang=pt">Twiter-X</a></li>
             </ul>
             <div>
               <p>&copy;-2025 -todos os direitos reservados</p>
