--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -55,9 +55,9 @@
           <div id="redes-sociais">
               <h3>Redes Sociais</h3>
               <ul>
-                  <li><a href="#">Facebook</a></li>
-                  <li><a href="#">Instagram</a></li>
-                  <li><a href="#">Twitter-X</a></li>
+                  <li><a href="https://www.facebook.com/?locale=pt_BR">Facebook</a></li>
+                  <li><a href="https://www.instagram.com/">Instagram</a></li>
+                  <li><a href="https://x.com/?lang=pt">Twitter-X</a></li>
               </ul>
               <div>
                   <p>&copy; 2025 - Todos os direitos reservados</p>
