Ajustes no código

--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!-- CHAMANDO O CSS EXTERNO -->
    <link rel="stylesheet" href="../src/css/estilo.css">
-   <link rel="icon" href="../src/assets/img/logochat.jpeg" type="image/png">
+   <link rel="icon" href="../src/assets/img/logo uxcellence sushi.jpg" type="image/png">
    <title>UXcellence Sushi</title>
 </head>
 <body>
     <header>
         <a href="../index.html">
-            <img src="../src/assets/img/logochat.jpeg" alt="Logo UXcellence Sushi" class="logo">
+            <img src="../src/assets/img/logo uxcellence sushi.jpg" alt="Logo UXcellence Sushi" class="logo">
         </a>
         <div id="container">
             <nav>
@@ -92,21 +92,21 @@
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (2).jpg" alt="" />
-                        <h3>Lámen Tradicional</h3>
+                        <h3>Rámen Tradicional</h3>
                         <p>R$ 45,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (3).jpg" alt="" />
-                        <h3>Sashimi Salmão</h3>
+                        <h3>Sashimi de Salmão</h3>
                         <p>R$ 34,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (4).jpg" alt="" />
-                        <h3>Combinado Cru Salmão (28 peças)</h3>
+                        <h3>Combinado Premium Salmão (28 peças)</h3>
                         <p>R$ 74,90.<br />.</p>
                         <button type="submit">Veja mais</button>
                     </article>
