--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../src/css/estilo.css">
-    <link rel="icon" href="../src/assets/img/logochat.jpeg" type="image/png">
+    <link rel="icon" href="../src/assets/img/logo uxcellence sushi.jpg" type="image/png">
     <title>Contato</title>
 </head>
 <body>
     <header>
-        <a href="./index.html">
-            <img src="../src/assets/img/logochat.jpeg" alt="Logo UXcellence Sushi" class="logo">
+        <a href="../index.html">
+            <img src="../src/assets/img/logo uxcellence sushi.jpg" alt="Logo UXcellence Sushi" class="logo">
         </a>
         <div id="container">
             <nav>
