--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -24,93 +24,105 @@
     </header>
     <section id="sushi">
         <div id="conteudo">
-            <main>
-                <center>
+             <main class="produtos-container">
+                <div style="text-align: center;">
                     <h2>Cardápio Uxcellence Sushi</h2>
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (1).jpg" alt="" />
                         <h3>Combinado Premium de Niguiris</h3>
-                        <p>R$ 89,90.<br />.</p>
+                        <p>Seleção refinada de niguiris com ingredientes frescos e de alta qualidade.</p>
+                        <h1>R$89,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (10).jpg" alt="" />
                         <h3>Combinado Tradicional de Sushi</h3>
-                        <p>R$ 69,90.<br />.</p>
+                        <p>Combinação clássica de sushis variados, ideal para os amantes da tradição japonesa.</p>
+                        <h1>R$69,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (11).jpg" alt="" />
                         <h3>Poke Bowl de Frango Grelhado</h3>
-                        <p>R$ 59,90.<br />.</p>
+                        <p>Poke nutritivo com frango grelhado, legumes frescos e arroz temperado.</p>
+                        <h1>R$59,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (13).jpg" alt="" />
                         <h3>Uramaki Crocante Especial</h3>
-                        <p>R$ 42,90.<br />.</p>
+                        <p>Uramaki com toque crocante por fora e recheio saboroso por dentro.</p>
+                        <h1>R$42,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (12).jpg" alt="" />
                         <h3>Poke Bowl Tropical Veggie</h3>
-                        <p>R$ 48,90.<br />.</p>
+                        <p>Opção vegetariana leve e colorida com ingredientes tropicais e frescos.</p>
+                        <h1>R$48,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (14).jpg" alt="" />
                         <h3>Nigiri de Salmão Especial (8 peças)</h3>
-                        <p>R$ 49,90.<br />.</p>
+                        <p>Fatias generosas de salmão fresco sobre arroz temperado.</p>
+                        <h1>R$49,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (15).jpg" alt="" />
                         <h3>Nigiri de Atum Clássico (8 peças)</h3>
-                        <p>R$ 52,90.<br />.</p>
+                        <p>Tradição em cada mordida com atum fresco sobre arroz levemente avinagrado.</p>
+                        <h1>R$52,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (5).jpg" alt="" />
                         <h3>Uramaki Maçaricado com Gergelim (4 peças)</h3>
-                        <p>R$ 32,90.<br />.</p>
+                        <p>Uramaki selado com maçarico, coberto por gergelim torrado.</p>
+                        <h1>R$32,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (17).jpg" alt="" />
                         <h3>Temari Sushi Colorido (12 peças)</h3>
-                        <p>R$ 64,90.<br />.</p>
+                        <p>Bolinhos de arroz decorados com peixe e legumes, visual vibrante e delicado.</p>
+                        <h1>R$64,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (2).jpg" alt="" />
                         <h3>Rámen Tradicional</h3>
-                        <p>R$ 45,90.<br />.</p>
+                        <p>Caldo quente e saboroso com macarrão e acompanhamentos típicos do Japão.</p>
+                        <h1>R$45,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (3).jpg" alt="" />
                         <h3>Sashimi de Salmão</h3>
-                        <p>R$ 34,90.<br />.</p>
+                        <p>Lâminas frescas de salmão servidas puras, realçando o sabor natural do peixe.</p>
+                        <h1>R$34,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (4).jpg" alt="" />
                         <h3>Combinado Premium Salmão (28 peças)</h3>
-                        <p>R$ 74,90.<br />.</p>
+                        <p>Variedade de sushis e sashimis com salmão premium para os fãs do peixe mais querido.</p>
+                        <h1>R$74,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
-                </center>
+                </div>
             </main>
             <aside>
           <h2>Filtros</h2>
