--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -30,7 +30,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (1).jpg" alt="" />
                         <h3>Combinado Premium de Niguiris</h3>
-                        <p>Seleção refinada de niguiris com ingredientes frescos e de alta qualidade.</p>
+                        <p>Seleção refinada de niguiris preparados com peixes nobres e arroz temperado especial.</p>
                         <h1>R$89,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -38,7 +38,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (10).jpg" alt="" />
                         <h3>Combinado Tradicional de Sushi</h3>
-                        <p>Combinação clássica de sushis variados, ideal para os amantes da tradição japonesa.</p>
+                        <p>Variedade de sushis clássicos com peixes frescos e alga crocante, tradição em cada peça.</p>
                         <h1>R$69,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -46,7 +46,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (11).jpg" alt="" />
                         <h3>Poke Bowl de Frango Grelhado</h3>
-                        <p>Poke nutritivo com frango grelhado, legumes frescos e arroz temperado.</p>
+                        <p>Frango grelhado com arroz, legumes frescos e molho especial, equilibrado e saboroso.</p>
                         <h1>R$59,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -54,7 +54,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (13).jpg" alt="" />
                         <h3>Uramaki Crocante Especial</h3>
-                        <p>Uramaki com toque crocante por fora e recheio saboroso por dentro.</p>
+                        <p>Enrolado de arroz com recheio cremoso e cobertura crocante que dá o toque final perfeito.</p>
                         <h1>R$42,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -62,7 +62,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (12).jpg" alt="" />
                         <h3>Poke Bowl Tropical Veggie</h3>
-                        <p>Opção vegetariana leve e colorida com ingredientes tropicais e frescos.</p>
+                        <p>Legumes tropicais com arroz temperado e molhos leves, ideal para uma refeição refrescante.</p>
                         <h1>R$48,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -70,7 +70,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (14).jpg" alt="" />
                         <h3>Nigiri de Salmão Especial (8 peças)</h3>
-                        <p>Fatias generosas de salmão fresco sobre arroz temperado.</p>
+                        <p>Fatias grossas de salmão fresco sobre arroz japonês com leve toque de wasabi artesanal.</p>
                         <h1>R$49,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -78,7 +78,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (15).jpg" alt="" />
                         <h3>Nigiri de Atum Clássico (8 peças)</h3>
-                        <p>Tradição em cada mordida com atum fresco sobre arroz levemente avinagrado.</p>
+                        <p>Tradicional e leve, com atum fresco cortado na hora e arroz de sushi bem temperado.</p>
                         <h1>R$52,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -86,7 +86,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (5).jpg" alt="" />
                         <h3>Uramaki Maçaricado com Gergelim (4 peças)</h3>
-                        <p>Uramaki selado com maçarico, coberto por gergelim torrado.</p>
+                        <p>Maçaricado na finalização e envolto por gergelim, crocante, aromático e irresistível.</p>
                         <h1>R$32,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -94,23 +94,23 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (17).jpg" alt="" />
                         <h3>Temari Sushi Colorido (12 peças)</h3>
-                        <p>Bolinhos de arroz decorados com peixe e legumes, visual vibrante e delicado.</p>
+                        <p>Bolinhos redondos de arroz cobertos por peixe, vegetais e decorados com cores vibrantes.</p>
                         <h1>R$64,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (2).jpg" alt="" />
-                        <h3>Rámen Tradicional</h3>
-                        <p>Caldo quente e saboroso com macarrão e acompanhamentos típicos do Japão.</p>
+                        <h3>Rámen Clássico do Japão Antigo</h3>
+                        <p>Macarrão oriental servido com caldo quente, ovo, nori, carne de porco e cebolinha fresca</p>
                         <h1>R$45,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
 
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (3).jpg" alt="" />
-                        <h3>Sashimi de Salmão</h3>
-                        <p>Lâminas frescas de salmão servidas puras, realçando o sabor natural do peixe.</p>
+                        <h3>Sashimi Nobre de Salmão Imperial</h3>
+                        <p>Fatias finas de salmão fresco, servidas puras para destacar seu sabor leve e delicado.<p>
                         <h1>R$34,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
@@ -118,7 +118,7 @@
                     <article class="produto">
                         <img src="../src/assets/img/sushi vertical (4).jpg" alt="" />
                         <h3>Combinado Premium Salmão (28 peças)</h3>
-                        <p>Variedade de sushis e sashimis com salmão premium para os fãs do peixe mais querido.</p>
+                        <p>Sushis e sashimis com salmão de alta qualidade, ideal para quem ama esse peixe nobre.</p>
                         <h1>R$74,90</h1>
                         <button type="submit">Veja mais</button>
                     </article>
