--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,11 +22,13 @@
             </nav>
         </div>
     </header>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
 
 <section class="contato">
   <div class="contato-container">
     <div class="info-contato">
-      <h2>Fale Conosco</h2>
+      <h2 >Fale Conosco</h2>
       <p>Telefone: (11) 5555-5555</p>
       <p>Email: contato@email.com</p>
       <p>Rua Exemplo, 123 - São Paulo, SP</p>
@@ -39,7 +41,7 @@
 </section>
 
 <section class="formulario-secao">
-    <h2>Faça a sua reserva</h2>
+    <h2 id="reserva">Faça a sua reserva</h2>
     <form action="#" method="post" class="formulario-contato">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" required />
