--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div id="container">
             <nav>
                 <ul>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./pages/cardapio.html">Cardápio</a></li>
                     <li><a href="./pages/sobre.html">Sobre</a></li>
                     <li><a href="./pages/contato.html">Contato</a></li>
