--- a/pages/contato.html
+++ b/pages/contato.html
@@ -15,6 +15,7 @@
         <div id="container">
             <nav>
                 <ul>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./cardapio.html">Cardápio</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
                     <li><a href="./contato.html">Contato</a></li>
@@ -24,18 +25,19 @@
     </header>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
-
 <section class="contato">
   <div class="contato-container">
     <div class="info-contato">
-      <h2 >Fale Conosco</h2>
-      <p>Telefone: (11) 5555-5555</p>
-      <p>Email: contato@email.com</p>
-      <p>Rua Exemplo, 123 - São Paulo, SP</p>
-      <p>Seg-Sáb: 11h30 às 23h<br>Dom: 11h30 às 22h</p>
+      <h1 >Fale Conosco</h1>
+      <p><strong>Telefone:</strong> (11) 5555-5555</p>
+      <p><strong>Email:</strong> contato@email.com</p>
+      <p><strong>Endereço:</strong> Exemplo, 123 - São Paulo, SP</p>
+      <p><strong>Horário de Atendimento:</strong>
+      <br>Segunda a Sábado: 11h30 às 23h<br> Domingo: 11h30 às 22h</p>
+      <p><strong>Formas de Pagamento:</strong><br>Cartão de Crédito, Débito, Pix e Dinheiro</p>
     </div>
     <div class="imagem-lateral">
-      <img src="../src/assets/img/mapa.jpg" alt="Endereço do local" />
+      <img src="../src/assets/img/lanternas.jpg" alt="Endereço do local" />
     </div>
   </div>
 </section>
