--- a/pages/cardapio.html
+++ b/pages/cardapio.html
@@ -16,6 +16,7 @@
         <div id="container">
             <nav>
                 <ul>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="./cardapio.html">Cardápio</a></li>
                     <li><a href="./sobre.html">Sobre</a></li>
                     <li><a href="./contato.html">Contato</a></li>
