--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -15,6 +15,7 @@
       <div id="container">
           <nav>
               <ul>
+                  <li><a href="../index.html">Home</a></li>
                   <li><a href="./cardapio.html">Cardápio</a></li>
                   <li><a href="./sobre.html">Sobre</a></li>
                   <li><a href="./contato.html">Contato</a></li>
@@ -28,7 +29,7 @@
           <h1>UXcellence Sushi</h1>
           <p>Acreditamos que uma boa comida conta uma boa história — e a nossa começou com um par de hashis e uma paixão verdadeira pela cultura japonesa.</p>
           <p>O <strong>UXcellence Sushi</strong> nasceu da ideia de unir duas paixões: o sabor autêntico da culinária japonesa e a experiência completa de se sentir bem-vindo. Daí veio o nome — uma mistura de "user experience" com "excellence", porque aqui, cada detalhe importa.</p>
-          <img src="../src/assets/img/logochat.jpeg" alt="Logo" class="logo-img">
+          <img src="../src/assets/img/logo uxcellence sushi.jpg" alt="Logo" class="logo-img">
       </div>
 
       <div class="outros">
