--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         </div>
     </header>
 
+       <section class="banner">
+        <img id="image" alt="Imagem" />
+        <div class="banner-text">
+            <h2>A arte do sushi,<br>elevada à excelência</h2>
+        </div>
+    </section>
+    
       <footer>
         <div class="footer-content">
           <div id="contato">
