--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -25,14 +25,12 @@
   </header>
 
   <section id="conteudo1">
-      <div class="sobrenos">
-          <h1>UXcellence Sushi</h1>
-          <p>Acreditamos que uma boa comida conta uma boa história — e a nossa começou com um par de hashis e uma paixão verdadeira pela cultura japonesa.</p>
-          <p>O <strong>UXcellence Sushi</strong> nasceu da ideia de unir duas paixões: o sabor autêntico da culinária japonesa e a experiência completa de se sentir bem-vindo. Daí veio o nome — uma mistura de "user experience" com "excellence", porque aqui, cada detalhe importa.</p>
-          <img src="../src/assets/img/logo uxcellence sushi.jpg" alt="Logo" class="logo-img">
-      </div>
 
       <div class="outros">
+         <h2>UXcellence Sushi</h2>
+          <p>Acreditamos que uma boa comida conta uma boa história — e a nossa começou com um par de hashis e uma paixão verdadeira pela cultura japonesa.</p>
+          <p>O <strong>UXcellence Sushi</strong> nasceu da ideia de unir duas paixões: o sabor autêntico da culinária japonesa e a experiência completa de se sentir bem-vindo. Daí veio o nome — uma mistura de "user experience" com "excellence", porque aqui, cada detalhe importa.</p>
+          <!-- <img src="../src/assets/img/logo uxcellence sushi.jpg" alt="Logo" class="logo-img"> -->
 
       <h2>Nossa Filosofia</h2>
       <p>Valorizamos a autenticidade e a inovação na medida certa. Resgatamos receitas tradicionais, mas também adicionamos nosso toque especial, abrangendo também a cultura nipo-brasileira.</p>
