--- a/pages/contato.html
+++ b/pages/contato.html
@@ -58,5 +58,26 @@
     </form>
   </section>
 
+  <footer>
+      <div class="footer-content">
+          <div id="contato">
+              <h3>Contato</h3>
+              <p>Email: contato@email.com</p>
+              <p>Telefone: (11) 5555-5555</p>
+          </div>
+          <div id="redes-sociais">
+              <h3>Redes Sociais</h3>
+              <ul>
+                  <li><a href="https://www.facebook.com/?locale=pt_BR">Facebook</a></li>
+                  <li><a href="https://www.instagram.com/">Instagram</a></li>
+                  <li><a href="https://x.com/?lang=pt">Twitter-X</a></li>
+              </ul>
+              <div>
+                  <p>&copy; 2025 - Todos os direitos reservados</p>
+              </div>
+          </div>
+      </div>
+  </footer>
+
 </body>
 </html>
